--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
   max-width: 15vw;
   height: auto;
   border-radius: 12px;
-  margin-bottom: 1.5rem;
+  margin: 0 0 1.5rem;
 }
 
 @media (max-width: 768px) {
