--- a/style.css
+++ b/style.css
@@ -193,12 +193,12 @@ button:active {
 
   .player h2 {
     font-size: 16px;
-    margin: 0 0 0.35rem;
+    margin: 0 0 24px;
   }
 
   .score {
     font-size: 40px;
-    margin: 0 0 0.5rem;
+    margin: 0 0 24px;
   }
 
   .controls {
